--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph Meta Tags (for previews on Twitter, Facebook, etc.) -->
     <meta property="og:title" content="16+ GIRLS HERE🔥🔥">
     <meta property="og:description" content="">
-    <meta property="og:image" content="https://i.postimg.cc/nzhyK68N/HENTAI-7.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/g0yCtZ6T/HENTAI-7.jpg">
     <meta property="og:type" content="website">
 
     <!-- Meta Refresh Redirect -->
